welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:34: error: expected class or object definition
def faireexo() {
^PatternPicture:42: error: expected start of definition
override def run() {
         ^PatternPicture:46: error: Unmatched closing brace '}' ignored here
}
^